# tracer_tools_py3

./: ExposureAge.py  He_tools.py  MANIFEST.in  README  TestAPR.py  cfc_tools.py  convolution_integral.py  get_atm_conc.py  hydrology_tools.py  pyproject.toml  sf6_tools.py  stable_isotope_tools.py  transport_tools.py
data/: Ca42_XS.csv  Differential_neutron_flux_normalized.csv  HeidelbergNeutronFlux.csv  JamtalNeutronFlux.xlsx  Neutron_flux_Normalized.csv  cfc11_atm.txt  cfc12_atm.txt  cfc_sf6_atm.txt  cfc_sf6_update_atm.txt  data_description.txt
data/xsec_data/: Brond-3_1.csv  Ca42_XS_Musy.csv  Ca42_XS_TENDL2019.csv  Ca42_Xsec_wStd_TENDL2019.csv  EXFOR_Bass_Fanger_Saleh_1964.csv  Interpolated_Cross_Sections.csv  Sources.txt
example/: CalcAccumulatedArgon.py  CalcAccumulatedArgonHG.py  CalcAr39ModernMassRatio.py  CalcArgonExtractionVolumes.py  MC_uncertainty.py  MakeModernRecharge.py  Plot_cross_sections.py  ProductionRateProfiles.py  evaporation_models.py  imaginary_rock_Ar39_production.ipynb  lapse_rate.py  make_atm_hist_plot.py  make_atm_hist_plot_obsolete.py  make_cfc_tracer_plot_boil.py  make_he_sf6_tracer_plot.py  noble_gas_equil_conc_plots.py  sf6_hist.txt
src/tracer_tools/: EXPACS-eng.xlsx  He_tools.py  JamtalNeutronFlux.CSV  K39_XS.csv  cfc113_atm.txt  cfc_tools.py  convolution_integral.py  get_atm_conc.py  noble_gas_tools.py  sf6_atm.txt  sf6_tools.py
src/tracer_tools/xsec_data/: EAF-2010.csv  ENDF_B-VIII_0.csv  JEFF-3_3.csv  JENDL-He-2007.csv  K39_XS_Musy.csv  TENDL-2019.csv
