[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tracer_tools"
version = "0.0.1"
authors = [
  { name="W. Payton Gardner", email="payton.gardner@umontana.edu" },
]
description = "A package with utilities for the interpretation of isotope tracers in hydrology including noble gases, sf6, cfcs, stable isotopes of water."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "xlrd",
    "lmfit",
]

[project.urls]
"Homepage" = "https://github.com/boatmorrow/tracer_tools_py3"
"Bug Tracker" = "https://github.com/boatmorrow/tracer_tools_py3/issues"

[tool.setuptools]
package-dir = {"" = "src"}
  # directory containing all the packages (e.g.  src/mypkg1, src/mypkg2)
include-package-data = true

packages = ["tracer_tools"]
  # tracer_tools.module corresponds to tracer_tools/module.py

#[tool.setuptools.packages.find]
#where = ["src"]
